SMA: Removed unused imports and other warnings